--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ NEXT_PUBLIC_SALE_PAUSED=
 NEXT_PUBLIC_CONTRACT_ADDRESS=
 NEXT_PUBLIC_COLLECTION_TYPE=
 NEXT_PUBLIC_TEST_NETWORK=
+NEXT_PUBLIC_CHAIN_NETWORK=
 NEXT_PUBLIC_OPENSEA_URL=
